fixed nav jumping

--- a/public/styles.css
+++ b/public/styles.css
@@ -1506,3 +1506,10 @@ video {
     }
   }
 }
+
+@media screen and (min-width: 960px) {
+  html {
+      margin-left: calc(100vw - 100%);
+      margin-right: 0;
+  }
+}
